// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart checkout() deve retornar um objeto com o total e a lista de itens 1`] = `
Object {
  "items": Array [
    Object {
      "product": Object {
        "price": 35388,
        "title": "Adidas",
      },
      "quantity": 2,
    },
    Object {
      "product": Object {
        "price": 41872,
        "title": "Nike",
      },
      "quantity": 3,
    },
  ],
  "total": 196392,
}
`;

exports[`Cart checkout() deve retornar um objeto com o total e a lista de itens quando sumary() for chamado 1`] = `
Object {
  "items": Array [
    Object {
      "product": Object {
        "price": 35388,
        "title": "Adidas",
      },
      "quantity": 5,
    },
    Object {
      "product": Object {
        "price": 41872,
        "title": "Nike",
      },
      "quantity": 3,
    },
  ],
  "total": 302556,
}
`;

exports[`Cart checkout() deve retornar um objeto com o total e a lista de itens quando summary() for chamado 1`] = `
Object {
  "items": Array [
    Object {
      "product": Object {
        "price": 35388,
        "title": "Adidas",
      },
      "quantity": 5,
    },
    Object {
      "product": Object {
        "price": 41872,
        "title": "Nike",
      },
      "quantity": 3,
    },
  ],
  "total": 302556,
}
`;
